--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Luke Hartfield"
-remote_theme: pages-themes/cayman@v0.2.0
-plugins: [jekyll-remote-theme, jekyll-redirect-from]
-exclude: ['README.md']
-baseurl: ""   # leave empty for a user site
+plugins:
+  - jekyll-redirect-from
+exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'node_modules/']
+baseurl: ""   # keep empty for a user site
